Chosen subreddit name now based on event